--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+ <meta name="image" property="og:image" content="https://raw.githubusercontent.com/abouhid/SpeedTypingGame/development/src/images/screenshot.png" />
 <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
     </head>
